--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,14 +1,15 @@
 .link {
-    font-weight: 500;
-     text-decoration: none;
-     color: var(--color-main);
-     padding: 20px 16px;
+  font-weight: 500;
+  text-decoration: none;
+  color: var(--color-main);
+  padding: 20px 16px;
+  transition: color 0.3s ease;
 }
 
 .link:hover {
-    color: var(--color-button-hover);
+  color: var(--color-button-hover);
 }
 
 .active {
-color: var(--color-button);
+  color: var(--color-button);
 }
