--- a/src/components/CamperItem/CamperItem.module.css
+++ b/src/components/CamperItem/CamperItem.module.css
@@ -29,6 +29,10 @@
   font-size: 24px;
   font-weight: 600;
   line-height: 1.33;
+    white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  max-width: 350px;
 }
 
 .reviewLocationBlock {
