--- a/src/components/CampersList/CampersList.module.css
+++ b/src/components/CampersList/CampersList.module.css
@@ -1,11 +1,35 @@
+.block {
+  display: flex;
+  flex-direction: column;
+}
 .list {
-    display: flex;
-    flex-direction: column;
-    gap: 32px;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
 }
 
 .item {
-    height: 368px;
-    width: 888px;
-    padding: 24px;
+  height: 368px;
+  width: 888px;
+  padding: 24px;
+}
+
+.btnBlock {
+  margin: 0 auto;
+}
+.loadMore {
+  border-radius: 200px;
+  border: 1px solid var(--color-gray-light);
+  cursor: pointer;
+  width: 145px;
+  background-color: var(--color-white);
+  font-weight: 500;
+  padding: 16px;
+  transition: border 0.3s ease;
+  line-height: 1.5;
+  letter-spacing: -0.005em;
+}
+
+.loadMore:hover {
+  border: 1px solid var(--color-button-hover);
 }
