--- a/src/components/AppBar/AppBar.module.css
+++ b/src/components/AppBar/AppBar.module.css
@@ -5,8 +5,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  max-width: 1440px;
   margin: 0 auto;
+  background-color: var(--color-badges);
 }
 
 .logo {
