--- a/src/pages/CampersPage/CampersPage.module.css
+++ b/src/pages/CampersPage/CampersPage.module.css
@@ -6,3 +6,10 @@
   display: flex;
   gap: 64px;
 }
+
+.textSorry {
+  width: 888px;
+  font-size: 20px;
+  font-weight: 500;
+  text-align: center;
+}
