--- a/src/components/CamperItem/CamperItem.module.css
+++ b/src/components/CamperItem/CamperItem.module.css
@@ -83,3 +83,9 @@
 .button:hover {
   background-color: var(--color-button-hover);
 }
+
+.btnFavorite {
+  border: none;
+  background: unset;
+  cursor: pointer;
+}
