feat(filter/favorite): add location filter, refactor favorites logic

--- a/src/components/FilterBlock/FilterBlock.module.css
+++ b/src/components/FilterBlock/FilterBlock.module.css
@@ -10,12 +10,49 @@
   line-height: 1.5;
   margin-bottom: 40px;
 }
+
 .input {
   height: 56px;
   padding: 18px 20px;
   border-radius: 12px;
   background-color: var(--color-inputs);
   border: none;
+  color: var(--color-main)
+}
+
+.inputLocation {
+  height: 56px;
+  padding: 18px 20px 18px 46px;
+  border-radius: 12px;
+  background-color: var(--color-inputs);
+  border: none;
+  color: var(--color-main);
+  width: 100%;
+  outline: none;
+}
+
+.inputWrapper {
+  position: relative;
+  display: flex;
+  align-items: center;
+
+}
+
+.icon {
+  position: absolute;
+  left: 18px;
+  width: 20px;
+  height: 20px;
+  pointer-events: none;
+  fill: var(--color-grey);
+}
+
+.activeIcon {
+  fill: var(--color-main);
+}
+
+.placeholder {
+  color: var(--color-grey);
 }
 
 .subtitle {
