--- a/src/index.css
+++ b/src/index.css
@@ -49,21 +49,8 @@ img {
   max-width: 100%;
 }
 
-/* button {
-  padding: 16px;
-  min-width: 166px;
-  color: var(--color-white);
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: -0.005em;
-  background-color: var(--color-button);
-  border-radius: 200px;
-  border: none;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;         
 }
-
-button:hover {
-  background-color: var(--color-button-hover);
-} */
