style: minor ui fixes and not-found page styling

--- a/src/components/CampersList/CampersList.module.css
+++ b/src/components/CampersList/CampersList.module.css
@@ -9,8 +9,7 @@
 }
 
 .item {
-  height: 368px;
-  width: 888px;
+  max-width: 888px;
   padding: 24px;
 }
 
@@ -32,4 +31,11 @@
 
 .loadMore:hover {
   border: 1px solid var(--color-button-hover);
+}
+
+@media screen and (max-width: 1439.98px) {
+.item {
+  max-width: 736px;
+  padding: 24px;
+}
 }
