--- a/src/components/AppBar/AppBar.module.css
+++ b/src/components/AppBar/AppBar.module.css
@@ -1,12 +1,17 @@
 .header {
-  position: relative;
+  background-color: var(--color-badges);
+}
+
+.container {
   padding: 0 64px;
-  height: 72px;
+  max-width: 1440px;
+  width: 100%;
   display: flex;
+  height: 72px;
   align-items: center;
   justify-content: center;
   margin: 0 auto;
-  background-color: var(--color-badges);
+  position: relative;
 }
 
 .logo {
@@ -14,17 +19,21 @@
   left: 64px;
 }
 
-@media screen and (min-width: 460px) and (max-width: 768px) {
-  .header {
-    justify-content: space-between;
+@media screen and (max-width: 1439.98px) {
+  .container {
+    max-width: 768px;
+    padding: 0 16px;
+  }
+  .logo {
+    left: 16px;
   }
 }
 
-@media screen and (max-width: 768px) {
-  .header {
+@media screen and (max-width: 767.98px) {
+  .container {
+    max-width: 420px;
     flex-wrap: wrap;
   }
-
   .logo {
     position: static;
   }
