--- a/src/components/CamperItem/CamperItem.module.css
+++ b/src/components/CamperItem/CamperItem.module.css
@@ -12,6 +12,13 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  min-width: 0;
+}
+
+.infoWrapper {
+  display: flex;
+  flex-direction: column;
   gap: 24px;
 }
 .generalBlock {
@@ -29,7 +36,7 @@
   font-size: 24px;
   font-weight: 600;
   line-height: 1.33;
-    white-space: nowrap;
+  white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
   max-width: 350px;
@@ -54,13 +61,14 @@
   text-overflow: ellipsis;
   overflow: hidden;
   max-width: 525px;
+  color: var(--color-text);
 }
 
 .propertiesBlock {
   display: flex;
   flex-wrap: wrap;
   gap: 8px;
-  width: 400px;
+  max-width: 400px;
 }
 
 .button {
